Added an install target.

--- a/misc/kbd/Makefile
+++ b/misc/kbd/Makefile
@@ -1,2 +1,6 @@
 splash_fgcon: fgconsole.o getfd.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $+ -o $@
+
+install:
+	install -D splash_fgcon $(DESTDIR)/sbin/splash_fgcon
+
