Fixed the splash_fbcon problem..

--- a/misc/kbd/Makefile
+++ b/misc/kbd/Makefile
@@ -4,5 +4,5 @@ fgconsole: fgconsole.o getfd.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $+ -o $@
 
 install:
-	install -D splash_fgcon $(DESTDIR)/lib/splash/bin/fgconsole
+	install -D fgconsole $(DESTDIR)/lib/splash/bin/fgconsole
 
