Added support for redifining library paths on the command line.

--- a/core/Makefile
+++ b/core/Makefile
@@ -12,11 +12,11 @@ DEBUG 	 = false		# set to true to prevent stripping
 K_SHARED = false		# set to true if you want to link to a shared klibc
 QUIET    = true
 
-JPEGSRC	= libs/jpeg-6b
-LPNGSRC = libs/libpng-1.2.8
-ZLIBSRC = libs/zlib-1.2.1
-FT2SRC  = libs/freetype-2.1.9
-LIBCSRC	= libs/klibc-1.0.8/klibc
+JPEGSRC	?= libs/jpeg-6b
+LPNGSRC ?= libs/libpng-1.2.8
+ZLIBSRC ?= libs/zlib-1.2.1
+FT2SRC  ?= libs/freetype-2.1.9
+LIBCSRC	?= libs/klibc-1.0.8/klibc
 
 prefix     =
 sbindir    = ${prefix}/sbin
